# Modellierung-und-Simulation-2

./: CMakeLists.txt  README.md  assemble_interface.h  coord_vector.h  coord_vector_impl.h  example.vtk  gauss_seidel.cpp  gauss_seidel.h  iterative_solver.cpp  iterative_solver.h  iterative_solver_recommendation.h  jacobi.cpp  jacobi.h  linear_solver_interface.h  lu_solver.cpp  main01.cpp  main03.cpp  main_test.cpp  matrix.cpp  matrix.h  poisson_disc.cpp  poisson_disc.h  preconditioner_interface.h  sparse_matrix.cpp  sparse_matrix.h  structured_grid.cpp  structured_grid.h  util.cpp  util.h  vector.cpp  vector.h  vtk_exporter.cpp  vtk_exporter.h
Code/: Visualisierung.xlsx
Code/template01/: CMakeLists.txt  app.cpp  gauss_seidel.cpp  gauss_seidel.h  iterative_solver.cpp  iterative_solver.h  jacobi.cpp  linear_solver_interface.h  lu_solver.cpp  lu_solver.h  main01.cpp  matrix.cpp  matrix.h  noted  notes  preconditioner_interface.h  sparse_matrix.cpp  sparse_matrix.h  vector.cpp  vector.h
